<resources>
    <string name="app_name">Movie Catalogue</string>

    <!--Tab Title-->
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Movies</string>
    <string name="tab_text_3">Tv Shows</string>
    <string name="tab_text_4">Contact Us</string>

    <!--Menu Title-->
    <string name="menu_1">Settings</string>

    <string name="test">Test</string>
    <string name="lorem">lorem ipsum dolor sit amet</string>
    <string name="age_category_17">17+</string>
    <string name="age_category_all">All</string>
    <string name="language_code">en-US</string>

    <string name="see_all">See All</string>
    <string name="title_film">Title</string>
    <string name="rating">Rating</string>
    <string name="rating_default">5.0</string>
    <string name="full_description">Full Description</string>
    <string name="overview">Overview</string>
    <string name="made_by">Made By Patricia Fiona</string>
    <string name="myEmail">patriciafiona3@gmail.com</string>
    <string name="genre">Genre</string>
    <string name="vote_count">4000 vote_count</string>
    <string name="release">Release</string>
    <string name="your_choose">You\'re choose</string>
    <string name="status">Status</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="imdb_id">IMDB Id</string>
    <string name="original_language">Original Language</string>
    <string name="popularity">Popularity</string>
    <string name="revenue">Revenue</string>
    <string name="vote_count_text">Vote Count</string>
    <string name="age_rating">Age Rating</string>
    <string name="no_translate">No translate for English language</string>

    <string name="first_air_date">First Air Date</string>
    <string name="last_air_date">Last Air Date</string>
    <string name="created_by">Created By</string>
    <string name="current_seasson">Current Seasson</string>
    <string name="seasson_ep_detail">0000 | 0 Episodes</string>
    <string name="detail_tv">Detail TV Show</string>
    <string name="production_status">Production Status</string>
    <string name="homepage">Homepage</string>
    <string name="networks">Networks</string>
    <string name="no_overview">Sorry, we don\'t have this overview.</string>
    <string name="ok">Oke</string>
    <string name="cancel">Cancle</string>
    <string name="dialog_message">Check Your Internet Connection?</string>
    <string name="dialog_title">No Internet Connection</string>
    <string name="search">Search</string>
    <string name="all_season">All Season</string>
    <string name="search_by_title">Search by Title</string>
    <string name="search_m_or_t">Search a Movie or TV Show</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="exit">Exit</string>
    <string name="check_connection">Check Connection</string>
</resources>
