<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_02_400x700"
    tools:context=".Activities.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar_detail_movie"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="32dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorDarkBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!--Background-->
            <ImageView
                android:id="@+id/detail_bg_top"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:alpha="0.5"
                android:src="@color/colorSolidGrey"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </RelativeLayout>

        <ImageView
            android:id="@+id/detail_poster"
            style="@style/detail_poster"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/detail_judul"
            style="@style/detail_judul"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:text="@string/title_film"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/detail_table01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_poster"
            app:layout_constraintTop_toBottomOf="@+id/detail_judul">

            <TableRow android:layout_height="56dp">

                <TextView
                    android:layout_width="84dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:text="@string/genre" />

                <TextView
                    android:id="@+id/detail_genre"
                    style="@style/detail_table01_fill" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/detail_status"
                    style="@style/detail_table01_fill" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:text="@string/age_rating" />

                <TextView
                    android:id="@+id/detail_age_rating"
                    style="@style/detail_table01_fill" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/Rating_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/ratting_text_movie"
                style="@style/detail_rating_text"
                android:layout_width="wrap_content"
                android:text="@string/rating_default"
                app:layout_constraintStart_toEndOf="@+id/ratingBar_movie" />

            <RatingBar
                android:id="@+id/ratingBar_movie"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/RatingBar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test" />


            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/detail_voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/vote_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Rating_container" />

        <TextView
            android:id="@+id/textView2"
            style="@style/detail_overview_tx"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_voteCount" />

        <TextView
            android:id="@+id/detail_overview_movie"
            style="@style/detail_overview_text"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:justificationMode="inter_word"
            android:text="@string/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            style="@style/detail_Movie"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/detail_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_overview_movie" />

        <TableLayout
            android:id="@+id/detail_table02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <TableRow>

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDonker"
                    android:text="@string/imdb_id" />

                <TextView
                    android:id="@+id/detail_imdb"
                    style="@style/detail_table02_fill" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDonker"
                    android:text="@string/original_language" />

                <TextView
                    android:id="@+id/detail_ori_language"
                    style="@style/detail_table02_fill"/>
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDonker"
                    android:text="@string/popularity" />

                <TextView
                    android:id="@+id/detail_popularity"
                    style="@style/detail_table02_fill" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorDonker"
                    android:text="@string/revenue" />

                <TextView
                    android:id="@+id/detail_revenue"
                    style="@style/detail_table02_fill"/>
            </TableRow>

        </TableLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>